--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-deploy:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1  # v2 does not have submodules option now
        # with:
@@ -29,17 +29,26 @@ jobs:
           PUBLISH_BRANCH: gh-pages  # 会自动建立
           PUBLISH_DIR: ./public
           commit_message: ${{ github.event.head_commit.message }}
-      
-      # # 部署到腾宝塔服务器
-      # - name: Webhook
-        # uses: distributhor/workflow-webhook@v1
-        # env:
-          # webhook_url: ${{ secrets.WEBHOOK_URL }}
-          # webhook_secret: ${{ secrets.WEBHOOK_SECRET }}
-      
-      # - name: Sending message
-        # uses: yakumioto/serverchan-action@v1
-        # with:
-          # key: ${{ secrets.sckey }}
-          # text: 'dennischancs.github.io/nav/'
-          # desp: '构建完成'
+
+      - name: Sync to Gitee  # 同步到gitee
+        uses: wearerequired/git-mirror-action@master
+        env:
+          # 注意在 Settings->Secrets 配置 GITEE_RSA_PRIVATE_KEY
+          SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
+        with:
+          # 注意替换为你的 GitHub 源仓库地址
+          source-repo: git@github.com:dennischancs/nav.git
+          # 注意替换为你的 Gitee 目标仓库地址
+          destination-repo: git@gitee.com:dennischan/nav.git
+        
+      - name: Build Gitee Pages
+        uses: yanglbme/gitee-pages-action@main
+        with:
+          # 注意替换为你的 Gitee 用户名
+          gitee-username: dennischan
+          # 注意在 Settings->Secrets 配置 GITEE_PASSWORD
+          gitee-password: ${{ secrets.GITEE_PASSWORD }}
+          # 注意替换为你的 Gitee 仓库，仓库名严格区分大小写，请准确填写，否则会出错
+          gitee-repo: dennischan/nav
+          # 要部署的分支，默认是 master，若是其他分支，则需要指定（指定的分支必须存在）
+          branch: master   # github默认是main, gitee默认是master
