--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,4 +51,4 @@ jobs:
           # 注意替换为你的 Gitee 仓库，仓库名严格区分大小写，请准确填写，否则会出错
           gitee-repo: dennischan/nav
           # 要部署的分支，默认是 master，若是其他分支，则需要指定（指定的分支必须存在）
-          branch: master   # github默认是main, gitee默认是master
+          branch: main   # github默认是main, gitee默认是master(同步一次后,在gitee中,将main设为默认分支,master分支删除)
