--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
           hugo-version: latest
           # extended: true
 
-      - name: Build
+      - name: Build GitHub Pages
         run: hugo
 
-      - name: Deploy
+      - name: Deploy GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.personal_token }} # 这里的 ACTIONS_DEPLOY_KEY 则是上面设置 Private Key的变量名
@@ -30,7 +30,7 @@ jobs:
           PUBLISH_DIR: ./public
           commit_message: ${{ github.event.head_commit.message }}
 
-      - name: Sync to Gitee  # 同步到gitee
+      - name: Sync to Gitee  # 同步仓库到gitee
         uses: wearerequired/git-mirror-action@master
         env:
           # 注意在 Settings->Secrets 配置 GITEE_RSA_PRIVATE_KEY
@@ -41,7 +41,7 @@ jobs:
           # 注意替换为你的 Gitee 目标仓库地址
           destination-repo: git@gitee.com:dennischan/nav.git
         
-      - name: Build Gitee Pages
+      - name: Deploy Gitee Pages
         uses: yanglbme/gitee-pages-action@main
         with:
           # 注意替换为你的 Gitee 用户名
@@ -51,4 +51,5 @@ jobs:
           # 注意替换为你的 Gitee 仓库，仓库名严格区分大小写，请准确填写，否则会出错
           gitee-repo: dennischan/nav
           # 要部署的分支，默认是 master，若是其他分支，则需要指定（指定的分支必须存在）
-          branch: main   # github默认是main, gitee默认是master(同步一次后,在gitee中,将main设为默认分支,master分支删除)
+          # github默认是main, gitee默认是master(同步一次后,在gitee中,将main设为默认分支,master分支删除)
+          branch: gh-pages # 同步了github仓库, 直接使用编译好的gh-pages分支, 在gitee pages中部署该分支即可
