--- a/config.toml
+++ b/config.toml
@@ -15,6 +15,8 @@ title = "一个导航"
     logoM = "https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages/images/favicon.png"
     # css和js文件的cdn
     cdn = "https://cdn.jsdelivr.net/gh/dennischancs/nav@gh-pages"
+    # 开启心知天气
+    seniverseweather = "true"
     # 开启今日诗词
     jinrishici = "true"
     # 开启访问量统计
