--- a/data/links.toml
+++ b/data/links.toml
@@ -143,15 +143,15 @@ siteLink="http://www.compileonline.com/"
 siteLogo="http://www.compileonline.com/favicon.ico"
 siteName="在线编译器"
 [[list.sub.item]]
-description="机器学习的docker容器"
-siteLink="http://localhost:8080"
+description="机器学习ml-workspace容器"
+siteLink="http://localhost:20000"
 siteLogo="https://tvax3.sinaimg.cn/large/7b0bc7fcgy1gu53z99mibj204u04y74c.jpg"
 siteName="ml-workspace"
 [[list.sub.item]]
-description="python的WebUI(集成在ml-workspace这个docker容器中)"
-siteLink="http://localhost:8080/lab"
+description="数据科学jupyter-docker-stacks-aio容器"
+siteLink="http://localhost:10000"
 siteLogo="https://jupyter.org/favicon.ico"
-siteName="JupyterLab"
+siteName="Jupyter-StacktLab"
 [[list.sub.item]]
 description="SQL刷题"
 siteLink="https://sqlzoo.net/"
