--- a/data/links.toml
+++ b/data/links.toml
@@ -76,6 +76,11 @@ siteLink="https://naotu.baidu.com/"
 siteLogo="https://naotu.baidu.com/favicon.ico"
 siteName="百度脑图"
 [[list.sub.item]]
+description="知犀思维导图
+siteLink="https://www.zhixi.com/"
+siteLogo="https://www.zhixi.com/favicon.ico"
+siteName="知犀"
+[[list.sub.item]]
 description="Microsoft Excel 和 PowerPoint 资源站"
 siteLink="https://andypope.info/"
 siteLogo="https://andypope.info/favicon.ico"
